[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unitree-sdk2-python"
version = "1.0.1"
description = "Unitree robot sdk version 2 for python"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "UnitreeRobotics", email = "unitree@unitree.com"}
]
dependencies = [
    "cyclonedds==0.10.2",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
]

[project.urls]
Repository = "https://github.com/unitreerobotics/unitree_sdk2_python"

[tool.setuptools.packages.find]
include = ["unitree_sdk2py", "unitree_sdk2py.*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]